hero overflow bug fix

--- a/assets/scss/layout/home/_hero.scss
+++ b/assets/scss/layout/home/_hero.scss
@@ -3,7 +3,7 @@
 .home-hero {
   display: flex;
   justify-content: center;
-  min-height: 100vh;
+  height: 100vh;
   text-align: left;
   background-image: url("~assets/images/hero.png");
   background-position: center;
